--- a/package.json
+++ b/package.json
@@ -4,9 +4,10 @@
   "scripts": {
     "ng": "ng",
     "start": "ng serve",
-    "build": "ng build",
+    "build": "npm run generate:routes && ng build",
     "watch": "ng build --watch --configuration development",
     "test": "ng test",
+    "generate:routes": "node scripts/generate-prerender-routes.js",
     "serve:ssr:pokemon": "node dist/pokemon/server/server.mjs"
   },
   "private": true,
@@ -23,6 +24,7 @@
     "@angular/platform-server": "^19.1.0",
     "@angular/router": "^19.1.0",
     "@angular/ssr": "^19.2.4",
+    "axios": "^1.8.4",
     "express": "^4.18.2",
     "rxjs": "~7.8.0",
     "tslib": "^2.3.0",
