--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "@angular/platform-server": "^19.1.0",
     "@angular/router": "^19.1.0",
     "@angular/ssr": "^19.2.4",
+    "@netlify/angular-runtime": "^2.3.1",
     "axios": "^1.8.4",
     "express": "^4.18.2",
     "rxjs": "~7.8.0",
